Fixes alignment.

--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -67,6 +67,7 @@
 
 	.results {
 		display: flex;
+		justify-content: center;
 		gap: 5rem;
 		flex-wrap: wrap;
 		margin: 2rem 0;
